tests/errors/syn_assignment_fun.kt
fun main() {
fun add(x: Int, y: Int): Int = x + y
val addFunc: (Int, Int) -> Double = ::add
}

